# rust-aoc-2022

./: Cargo.toml
src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  main.rs  runner.rs
