[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
scraper = "0.13"
reqwest = {version = "0.11", features = ["cookies"]}
itertools = "0.10"